--- a/frontend/src/app/modules/main/calendar/calendar-grid/calendar-grid.component.html
+++ b/frontend/src/app/modules/main/calendar/calendar-grid/calendar-grid.component.html
@@ -7,5 +7,5 @@
         [component]="cellComponent"
         [calendar]="calendar"
         [expenses]="expenses"
-        [balances]="balances">
+        [expenseBalances]="expenseBalances">
 </app-calendar-grid-row>
