--- a/frontend/src/app/modules/main/header/header.component.html
+++ b/frontend/src/app/modules/main/header/header.component.html
@@ -57,7 +57,7 @@
         </nb-button-group>
 
         <nb-actions size="small">
-            <nb-action icon="bar-chart-outline"></nb-action>
+            <nb-action icon="bar-chart-outline" routerLink="/reports"></nb-action>
         </nb-actions>
     </div>
 </div>
