--- a/frontend/src/app/modules/main/calendar/calendar-grid-row-cell-mobile/calendar-grid-row-cell-mobile.component.html
+++ b/frontend/src/app/modules/main/calendar/calendar-grid-row-cell-mobile/calendar-grid-row-cell-mobile.component.html
@@ -3,6 +3,6 @@
         <div *ngIf="hasUnconfirmedExpenses" class="unconfirmed-expenses me-2"></div>
         <strong>{{ day }}</strong>
     </div>
-    <small class="d-block" *ngIf="balance?.expenses || (balance && isCellSelected)">{{ balance.expenses | shortNumber:'.0-0' }}</small>
-    <small class="d-block" *ngIf="balance?.expenses || (balance && isCellSelected)">{{ balance.balance | shortNumber:'.0-0' }}</small>
+    <small class="d-block" *ngIf="expenseBalance?.expense || (expenseBalance && isCellSelected)">{{ expenseBalance.expense | shortNumber:'.0-0' }}</small>
+    <small class="d-block" *ngIf="expenseBalance?.expense || (expenseBalance && isCellSelected)">{{ expenseBalance.balance | shortNumber:'.0-0' }}</small>
 </div>
