--- a/frontend/src/app/modules/main/dialogs/datepicker-dialog/datepicker-dialog.component.html
+++ b/frontend/src/app/modules/main/dialogs/datepicker-dialog/datepicker-dialog.component.html
@@ -9,6 +9,7 @@
     <nb-calendar
         size="medium"
         [(date)]="date"
+        [visibleDate]="date"
         (dateChange)="dialogRef.close(date)">
     </nb-calendar>
 </nb-card>
