--- a/frontend/src/app/modules/main/main.component.html
+++ b/frontend/src/app/modules/main/main.component.html
@@ -23,7 +23,7 @@
         </app-calendar>
     </nb-layout-column>
 
-    <nb-sidebar tag="menu-sidebar" state="collapsed">
+    <nb-sidebar tag="{{ SIDEBAR_TAG }}" state="collapsed" appOutsideClick (outsideClick)="onSidebarOutsideClick()">
         <div class="p-3">
             <app-profile [user]="mainService.user"></app-profile>
             <div class="border-bottom my-3"></div>
