--- a/frontend/src/app/modules/main/components/suggestion/suggestion.component.html
+++ b/frontend/src/app/modules/main/components/suggestion/suggestion.component.html
@@ -1,7 +1,7 @@
-<div class="suggestion" (keydown.tab)="$event.preventDefault(); doSuggest()">
+<div class="suggestion" (keydown.tab)="$event.preventDefault(); applySuggestion()">
     <ng-content></ng-content>
     <div class="suggest {{ cssClasses }}">
         <span class="suggestion-prefix">{{ input }}</span>
-        <span class="suggestion-suffix" (click)="doSuggest()">{{ suggestion }}</span>
+        <span class="suggestion-suffix" (click)="applySuggestion()">{{ suggestion }}</span>
     </div>
 </div>
