added button to edit categories

--- a/frontend/src/app/modules/main/dialogs/categories-dialog/categories-dialog.component.html
+++ b/frontend/src/app/modules/main/dialogs/categories-dialog/categories-dialog.component.html
@@ -13,7 +13,7 @@
             [categories]="categories"
             [category]="editableCategory"
             [saveButtonEnabled]="isBusy"
-            (back)="editableCategory = undefined"
+            (back)="editableCategory = undefined; fetch()"
             (save)="saveCategory($event)">
     </app-category-edit>
 </div>
