--- a/frontend/src/app/modules/main/sidebar/calendar-list/calendar-list.component.html
+++ b/frontend/src/app/modules/main/sidebar/calendar-list/calendar-list.component.html
@@ -44,5 +44,8 @@
             <nb-icon icon="plus"></nb-icon>
             Add a calendar...
         </button>
+        <button nbButton status="success" ghost (click)="editCategories()" class="ms-3" title="Category management">
+            <nb-icon icon="pricetags-outline"></nb-icon>
+        </button>
     </div>
 </div>
