--- a/frontend/src/app/modules/reports/components/daily-expenses/daily-expenses.component.html
+++ b/frontend/src/app/modules/reports/components/daily-expenses/daily-expenses.component.html
@@ -3,7 +3,7 @@
         <span style="line-height: 32px;" class="d-block mb-3 mb-sm-0">Cash flow</span>
         <app-reports-period-selector period="month" (dateRangeChange)="onDateRangeChange($event)"></app-reports-period-selector>
     </nb-card-header>
-    <nb-card-body>
+    <nb-card-body class="overflow-hidden">
         <div class="mb-3">
             <app-date-range [dateRange]="dateRange" />
         </div>
@@ -21,6 +21,13 @@
                 <strong>{{ change|shortNumber }}</strong>
             </div>
         </div>
-        <canvas style="max-height: 400px;" baseChart [options]="lineChartOptions" [data]="lineChartData" type="line"></canvas>
+        <div class="chart">
+            <canvas style="max-height: 400px;" baseChart [options]="lineChartOptions" [data]="lineChartData" type="line"></canvas>
+            <div class="chart-tooltip">
+                <h6 class="m-0 text-hint text-center title"></h6>
+                <div><strong>Balance: </strong><span class="balance">{{ 0|shortNumber }}</span></div>
+                <div><strong>Change: </strong><span class="change">{{ 0|shortNumber }}</span></div>
+            </div>
+        </div>
     </nb-card-body>
 </nb-card>
