user registration disable

--- a/frontend/src/app/modules/auth/components/login/login.component.html
+++ b/frontend/src/app/modules/auth/components/login/login.component.html
@@ -109,6 +109,6 @@
     </div>
 </section>
 
-<section class="another-action" aria-label="Register">
+<section class="another-action" aria-label="Register" *ngIf="!APP_CONFIG.registrationDisabled">
     Don't have an account? <a class="text-link" routerLink="../register">Register</a>
 </section>
