modified timezone in backend service to use UTC

--- a/frontend/src/app/modules/auth/components/login/login.component.html
+++ b/frontend/src/app/modules/auth/components/login/login.component.html
@@ -112,3 +112,7 @@
 <section class="another-action" aria-label="Register" *ngIf="!APP_CONFIG.registrationDisabled">
     Don't have an account? <a class="text-link" routerLink="../register">Register</a>
 </section>
+
+<section class="another-action">
+    <small class="text-hint">v{{ environment.version }}</small>
+</section>
