--- a/frontend/src/app/modules/main/header/header.component.html
+++ b/frontend/src/app/modules/main/header/header.component.html
@@ -12,6 +12,7 @@
                     <span title="This months balance" [class.text-success]="visibleDateBalance > 0" [class.text-danger]="visibleDateBalance < 0">{{ visibleDateBalance | shortNumber }}</span>
                 </span>
             </small>
+            {{ visibleDate }}
         </div>
     </div>
 
