--- a/frontend/src/app/modules/reports/reports.component.html
+++ b/frontend/src/app/modules/reports/reports.component.html
@@ -18,9 +18,9 @@
                                 <nb-checkbox
                                     [checked]="selectedCalendars.indexOf(c) !== -1"
                                     (checkedChange)="onCheckedChange(c, $event)"
-                                    class="text-truncate"
-                                    >{{ c.name }}</nb-checkbox
-                                >
+                                    class="text-truncate">
+                                    {{ c.name }}
+                                </nb-checkbox>
                             </nb-list-item>
                         </nb-list>
                     </div>
