--- a/frontend/src/app/modules/main/dialogs/expense-list-dialog/expense-list-dialog.component.html
+++ b/frontend/src/app/modules/main/dialogs/expense-list-dialog/expense-list-dialog.component.html
@@ -15,9 +15,11 @@
             [expenses]="confirmedExpenses"
             (expenseClick)="editExpense($event)" />
     </nb-card-body>
-    <nb-card-footer class="d-flex justify-content-between align-items-center">
+    <nb-card-footer class="d-flex justify-content-between align-items-center px-3">
         <div>
-            <a href="#" (click)="$event.preventDefault(); createExpense()">Add new transaction</a>
+            <button nbButton fullWidth status="primary" ghost (click)="createExpense()">
+                <nb-icon icon="plus"></nb-icon> Add transaction
+            </button>
         </div>
         <div class="text-center">
             <small class="d-block text-hint">DAILY CHANGE</small>
